api: - finish job creation route. client: - finish job creation form & logic. - ui improvment.
